Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,69 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
-
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>Summersu.GitHub.io by SummerSu</title>
-  </head>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  </head>
   <body>
-    <a id="forkme_banner" href="https://github.com/SummerSu">View on GitHub</a>
-    <div class="shell">
 
       <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Summersu.GitHub.io</h1>
-            <h2>菜鸟长成中</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
+        <h1>Summersu.GitHub.io</h1>
+        <p>菜鸟长成中</p>
       </header>
 
-      <div id="no-downloads">
-        <span class="inner">
-        </span>
-      </div>
+      <div id="banner">
+        <span id="logo"></span>
 
+        <a href="https://github.com/SummerSu" class="button fork"><strong>View On GitHub</strong></a>
+      </div><!-- end banner -->
 
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <p>好不容易开通一个博客，纯英文的真心看着费劲。不过没有办法啊~英语是硬伤。相信以后会好的。
-现在还不是太会使用这个github博客。研究透了再传点代码上来。
-估计也不会有人看。也不知道说些什么，等想起来再说啦。先这样。</p>
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
+        <p>好不容易开通一个git博客，纯英文的真心看着费劲。
+不过没有办法啊~英语是硬伤。相信以后会好的。
+现在还不是太会使用这个github博客。研究熟悉了再传点代码上来。
+估计也不会有人看。也不知道说些什么，等想起来再说啦。先这样。
+我的csdn博客是：<a href="http://blog.csdn.net/sunnysu99">http://blog.csdn.net/sunnysu99</a></p>
       </section>
-
       <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/SummerSu">SummerSu</a> can be found on <a href="https://github.com/SummerSu">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
-
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
