--- a/index.html
+++ b/index.html
@@ -32,10 +32,19 @@
         <ul></ul>
       </nav>
       <section>
-        <p>好不容易开通一个git博客，纯英文的真心看着费劲。
+        <p>
+          <td>
+            好不容易开通一个git博客，纯英文的真心看着费劲。
+          </td>
+          <td>
 不过没有办法啊~英语是硬伤。相信以后会好的。
+</td>
+<td>
 现在还不是太会使用这个github博客。研究熟悉了再传点代码上来。
+</td>
+<td>
 估计也不会有人看。也不知道说些什么，等想起来再说啦。先这样。
+</td>
 我的csdn博客是：<a href="http://blog.csdn.net/sunnysu99">http://blog.csdn.net/sunnysu99</a></p>
       </section>
       <footer>
