--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Summersu.GitHub.io</h1>
+      <h1 class="title">夏天小姐的博客</h1>
     </header>
     <div id="container">
       <p class="tagline">菜鸟长成中</p>
@@ -58,7 +58,43 @@
     <a href="https://github.com/SummerSu/SummerSu.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/SummerSu/SummerSu.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
+  
+  
 
+<div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/SummerSu" class="code">View Summersu.GitHub.io on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <p>第二次上这个博客，竟然不知道在哪里看。囧～之前的博客还是不会换行的。捣鼓半天才算完。
+废话不多说。昨天开始写代码（呆驴）碰到的是segmentedControl。
+是从code4app上找的代码，说来惭愧。一直说要自己封装控件，也没实现这个愿望。不过还是相信自己能写出来的了。
+因为要做的是个自定义segmentedControl切换标签，班门弄斧讲下想法：
+1.继承UIControl,声明需要用到的属性。
+2.初始化。包括标签名和样式。在初始化中遍历所有属性并创建和布局。
+3.给标签的点击事件设置动画和响应</p>
+        </article>
+      </div>
+    </div>
+    <footer>
+      <div class="owner">
+
+      <p><a href="https://github.com/SummerSu" class="avatar"><img src="https://avatars3.githubusercontent.com/u/9532521?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/SummerSu">SummerSu</a> on <a href="https://www.github.com">GitHub</a></p>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/SummerSu/SummerSu.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/SummerSu/SummerSu.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
   
 </body>
 </html>
