--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/SummerSu" class="code">View Summersu.GitHub.io on GitHub</a>
+          <a href="https://github.com/SummerSu" class="code">View 我的主页 GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -63,7 +63,9 @@
 
 <div id="main" role="main">
         <div class="download-bar">
+         
         <div class="inner">
+           <content="width=device-width,initial-scale=1">
           <a href="https://github.com/SummerSu" class="code">View Summersu.GitHub.io on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
