--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
 因为要做的是个自定义segmentedControl切换标签，班门弄斧讲下想法：
 1.继承UIControl,声明需要用到的属性。
 2.初始化。包括标签名和样式。在初始化中遍历所有属性并创建和布局。
-3.给标签的点击事件设置动画和响应</p>
+3.给标签的点击事件设置动画和响应
+4.查看效果
+</p>
         </article>
       </div>
     </div>
