--- a/index.html
+++ b/index.html
@@ -70,3 +70,77 @@
   
 </body>
 </html>
+
+
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
+
+  <title>Summersu.GitHub.io</title>
+  <meta name="description" content="菜鸟长成中">
+
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+</head>
+
+<body>
+
+  <div class="wrapper">
+    <header>
+      <h1 class="title">夏天小姐的博客</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">菜鸟长成中</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/SummerSu" class="code">View 我的主页 GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <p>好不容易开通一个git博客，纯英文的真心看着费劲。
+不过没有办法啊~英语是硬伤。相信以后会好的。
+现在还不是太会使用这个github博客。研究熟悉了再传点代码上来。
+估计也不会有人看。也不知道说些什么，等想起来再说啦。先这样。
+我的csdn博客是：<a href="http://blog.csdn.net/sunnysu99">http://blog.csdn.net/sunnysu99</a></p>
+        </article>
+      </div>
+     <a href="http://user.qzone.qq.com/1274005014?ptlang=2052</a> 
+      
+    </div>
+    <footer>
+      <div class="owner">
+
+      <p><a href="https://github.com/SummerSu" class="avatar"><img src="https://avatars3.githubusercontent.com/u/9532521?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/SummerSu">SummerSu</a> on <a href="https://www.github.com">GitHub</a></p>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/SummerSu/SummerSu.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/SummerSu/SummerSu.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+  
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/SummerSu/SummerSu.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/SummerSu/SummerSu.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+  
+</body>
+</html>
