Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Summersu.GitHub.io</title>
-  <meta name="description" content="菜鸟长成中">
+  <title>first content</title>
+  <meta name="description" content="one">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -22,14 +22,14 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">夏天小姐的博客</h1>
+      <h1 class="title">first content</h1>
     </header>
     <div id="container">
-      <p class="tagline">菜鸟长成中</p>
+      <p class="tagline">one</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/SummerSu" class="code">View 我的主页 GitHub</a>
+          <a href="https://github.com/SummerSu" class="code">View first content on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -41,8 +41,6 @@
 我的csdn博客是：<a href="http://blog.csdn.net/sunnysu99">http://blog.csdn.net/sunnysu99</a></p>
         </article>
       </div>
-     <a href="http://user.qzone.qq.com/1274005014?ptlang=2052</a> 
-      
     </div>
     <footer>
       <div class="owner">
@@ -60,13 +58,7 @@
     <a href="https://github.com/SummerSu/SummerSu.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/SummerSu/SummerSu.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
-  
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/SummerSu/SummerSu.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/SummerSu/SummerSu.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+
   
 </body>
 </html>
